...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/cardview_shadow_start_color"
            android:gravity="center_vertical"
            android:paddingLeft="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ConnectWithE4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="connect"
                android:text="Connect"
                android:textSize="12dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/stopMeasurement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:enabled="false"
                android:onClick="stopStreaming"
                android:text="Stop"
                android:textSize="12dp"/>

            <Button
                android:id="@+id/EventButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:onClick="showEvent"
                android:text="Event"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/EmpaticaStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:text=" Event Card" />

                        <TextView
                            android:id="@+id/ChosenEvent"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:gravity="center"
                            android:onClick="showEvent"
...
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:orientation="horizontal">


                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/StartEvent"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:insetLeft="0dp"
                                android:insetTop="0dp"
                                android:insetRight="0dp"
...
                                app:iconGravity="textStart"
                                app:iconPadding="0dp"
                                app:iconSize="150dp"
                                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/StopEvent"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginLeft="10dp"
                                android:insetLeft="0dp"
                                android:insetTop="0dp"
...
                                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle" />
                        </LinearLayout>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/dataGraph"
...
                        android:layout_height="50dp"
                        android:background="@drawable/iv_p1"
                        android:text="Happy"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/SmileButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/iv_p2"
                        android:text="Happy"
                        android:textSize="14sp" />
...
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/iv_p4" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/AngryButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/iv_p5"
                        android:text="Angry"
                        android:textSize="14sp" />
...
