<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f7f9"
    tools:context=".MeasurementCompleted">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_height="140dp"
            android:layout_width="match_parent"
            android:background="#f7f8fa"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="left">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Huidgeleiding App"
                    android:layout_marginTop="40dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="#663366"
                    android:id="@+id/toolbar_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Details Meting"
                    android:layout_marginTop="40dp"
                    android:textSize="20dp"
                    android:textStyle="normal"
                    android:textColor="#663366"
                    android:id="@+id/toolbar_title2" />


            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Naam:"
                android:textSize="16dp"
                android:layout_gravity="center"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textView_name"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shimmer3-6122"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textSize="15dp"
                android:singleLine="true"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wearable"
                android:textSize="16dp"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/textView_wearable"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shimmer3-6122"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textSize="15dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Starttijd meting"
                android:textSize="16dp"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/textView_start"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shimmer3-6122"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textSize="15dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Eindtijd meting"
                android:textSize="16dp"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/textView_end"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shimmer3-6122"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textSize="15dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Duur meting"
                android:textSize="16dp"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/textView_time"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shimmer3-6122"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textSize="15dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveMeasurementButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:onClick="saveMeasurement"
                android:text="Save measurement "
                android:textSize="12dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/returnToHomeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/returnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="backToHome"
                android:layout_marginTop="10dp"
                android:textSize="12dp"
                android:text="Terug naar hoofdmenu" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>