...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/showGraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:onClick="showGraph"
                android:text="View dataset"
                android:textSize="12dp" />



            <com.google.android.material.button.MaterialButton
                android:id="@+id/shareDataset"
...
